# backend_api

./: .env  .gitignore  Dockerfile  README.md  README.txt  acesso.py  api.py  app.py  data.py  domain.py  geraDf.py  pip.conf  pyproject.toml  requirements.txt  scriptssql.py  teste.py  usuario.py
cert/: server.csr  server.pem
certs/: server.crt  server.key
front/: index.html  script.js  styles.css
src/: main.py
src/core/: auth.py  config.py  database.py  log.py
src/routers/: api.py  web.py
src/routers/models/: card.py  ocr.py
src/services/: dao.py  ocr.py  versions.py  versions_getter.py
static/: asset-manifest.json  index.html
static/static/css/: main.3e8ae6eb.css  main.3e8ae6eb.css.map  main.9b3fbc3a.css  main.9b3fbc3a.css.map  main.a69466ea.css  main.a69466ea.css.map  main.d2de92cb.css  main.d2de92cb.css.map
static/static/js/: main.31d24b45.js  main.31d24b45.js.map  main.45bf48ca.js  main.45bf48ca.js.map  main.91c78216.js  main.91c78216.js.map  main.91d478e7.js  main.91d478e7.js.map  main.aea3da5d.js  main.aea3da5d.js.map  main.b573cc81.js  main.b573cc81.js.map  main.cafa16e5.js  main.cafa16e5.js.map  main.cb5c44d4.js  main.cb5c44d4.js.map  main.dfadc8ad.js  main.dfadc8ad.js.map  main.fdbb9bb2.js  main.fdbb9bb2.js.map
