[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "httpx>=0.28.1",
    "ibm-db>=3.2.4",
    "ibm-db-sa>=0.4.1",
    "pandas>=2.2.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
]

[tool.uv]
index-url = "https://binarios.intranet.bb.com.br/artifactory/api/pypi/pypi/simple"
allow-insecure-host = ["binarios.intranet.bb.com.br"]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
    "taskipy>=1.14.0",
]

[tool.taskipy.tasks]
s = "sudo python3 domain.py"
d = "fastapi dev src/main.py --reload"
r = "uvicorn src.main:app --reload --host 0.0.0.0 --ssl-keyfile=certs/server.key --ssl-certfile=certs/server.crt"

lint = "ruff check . && ruff check . --diff"
f = "ruff check . --fix && ruff format ."

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "PT",  # pytest
    "PL",  # pylint
    "C",   # mccabe
    "B",   # bugbear
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "S",   # bandit
    "RUF", # ruff-specific rules
]

ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "B008", # Do not use mutable data structures for argument defaults
    "S501", # Requests without SSL verification
]

isort.known-first-party = ["app"]
mccabe.max-complexity = 10
pydocstyle.convention = "google"

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"
